# TgramBotz

./: .env.example  .gitignore  CLAUDE.md  Justfile  README.md  bootstrap.sh  diagnose.py  doppler.yaml  e2b.Dockerfile  pyproject.toml
scripts/: build_template.py  check_auth.py  sandbox_ctl.py  sandboxes.py
src/e2b_builder/: __init__.py  _builder.py  errors.py  models.py
src/e2b_builder/contexts/: __init__.py
src/e2b_builder/contexts/default/: Dockerfile
src/tgrambotz/: __init__.py  __main__.py  agent.py  config.py  local_agent.py  main.py
src/tgrambotz/agent/: base.py  opencode.py
src/tgrambotz/bot/: handlers.py  renderer.py  shell.py  status.py  telegraph.py
src/tgrambotz/db/: database.py  models.py
src/tgrambotz/events/: types.py
src/tgrambotz/sandbox/: base.py  e2b.py
tests/: conftest.py  test_builder.py  test_contexts.py  test_runner.py
