[project]
name = "tgrambotz"
version = "0.1.0"
description = "Telegram-native remote coding agent platform"
readme = "README.md"
authors = [
    { name = "Claude", email = "noreply@anthropic.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.3",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-telegram-bot[webhooks]>=21",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.48.0",
]

[project.scripts]
tgrambotz = "tgrambotz.main:app"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
