[project]
name = "tgrambotz"
version = "0.1.0"
description = "Telegram bot that chats with an opencode agent running in an E2B sandbox"
requires-python = ">=3.11"
dependencies = [
    "e2b>=2.25.1",
    "pydantic-settings>=2.14.1",
    "python-telegram-bot>=21",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
